Using OverlayScrollbars to keep layout consistent on fixed tracklists

--- a/src/app.css
+++ b/src/app.css
@@ -7,3 +7,8 @@
         @apply text-2xl;
     }
 }
+
+.os-theme-custom {
+    --os-size: 10px;
+    --os-handle-max-size: 40px;
+}
